service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: playground
  namespace: dev
spec:
  selector:
    app: playground
  ports:
    - name: http
      port: 8888
      targetPort: http
